# memory-the-game

./: README.MD
backend/: .gitignore  pyproject.toml  readme.md
backend/app/: admin.py  models.py  serializers.py  views.py
backend/app/migrations/: 0001_initial.py  0002_card_field.py  0003_remove_card_number.py  0004_player_delete_item.py  0005_game_delete_field.py  0006_card_background_color.py  0007_alter_card_url.py
backend/django_api/: settings.py  urls.py
client/: index.html  readme.md
frontend/: .env  .env.development  .env.production  .eslintrc.json  .prettierrc.json  .stylelintrc.json  index.html  jsconfig.json  package-lock.json  package.json  readme.md  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.vue  main.js  main.ts  types.d.ts
frontend/src/app/: index.ts  router.ts
frontend/src/lib/: useAppFetch.js
frontend/src/lib/api/: index.js
frontend/src/shared/lib/: index.ts
frontend/src/shared/lib/api/: index.ts  useAppFetch.ts
frontend/src/shared/lib/math/: getUId.ts  index.ts
frontend/src/shared/stores/game/: index.ts  useCardsStore.ts  useGameStore.ts  useHistoryStore.ts  usePlayersStore.ts
frontend/src/shared/types/: index.ts
frontend/src/shared/ui/: _layout.scss  _mixins.scss  _variables.scss  styles.scss
frontend/src/store/: useCardsStore.js  useFieldStore.js  usePlayersStore.js
frontend/src/store/game/: index.js  useCardsStore.js  useGameStore.js  useHistoryStore.js  usePlayersStore.js
frontend/src/ui/: _layout.scss  _mixins.scss  _variables.scss  style.css  styles.scss
server/: readme.md
